--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=admin
 spring.datasource.password=admin
+server.tomcat.relaxed-query-chars=|,{,},[,]
